tests/ui/associated-inherent-types/impl_params_are_infers.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/impl_params_are_infers.rs:30:48
   |
LL |     field: Foo<T, U, <u16 as Identity>::This>::IAT,
   |                                                ^^^ multiple `IAT` found
   |
note: candidate #1 is defined in an impl for the type `Foo<T, T, u8>`
  --> $DIR/impl_params_are_infers.rs:11:5
   |
LL |     type IAT = u8;
   |     ^^^^^^^^
note: candidate #2 is defined in an impl for the type `Foo<T, U, u16>`
  --> $DIR/impl_params_are_infers.rs:15:5
   |
LL |     type IAT = u16;
   |     ^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0034`.
